--- a/src/app/styles/_mixins.scss
+++ b/src/app/styles/_mixins.scss
@@ -12,3 +12,20 @@
     margin-left: $action-buttons-gap;
   }
 }
+
+@mixin group-table-team-link {
+  .group-table {
+    margin-bottom: $bot-indent;
+
+    div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+
+      mat-icon {
+        color: $color-accent;
+      }
+    }
+  }
+}
