--- a/src/app/team/components/placements-table/placements-table.component.html
+++ b/src/app/team/components/placements-table/placements-table.component.html
@@ -19,6 +19,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <ng-template #noParticipations>
-    <app-no-content message="team is yet to participate in a tournament"></app-no-content>
+    <app-no-content message="Team is yet to participate in a tournament"></app-no-content>
   </ng-template>
 </div>
