--- a/src/app/tournament/components/general/general.component.scss
+++ b/src/app/tournament/components/general/general.component.scss
@@ -3,6 +3,10 @@
 .general {
   &__header {
     margin-bottom: $bot-indent;
+
+    button {
+      margin-left: $action-buttons-gap;
+    }
   }
 
   &__section {
