--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -4,9 +4,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  background: #f6f6f6;
 
   &__container {
     height: 100%;
+    width: 100%;
+    max-width: 60rem;
+    margin: 0 auto;
   }
 
   &__list {
@@ -25,7 +29,17 @@
     }
   }
 
+  &__badge {
+    width: 1.5rem;
+  }
+
   &--hidden {
     display: none !important;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  mat-sidenav {
+    min-width: 10rem;
   }
 }
