--- a/src/app/tournament/components/classic-table/classic-table.component.html
+++ b/src/app/tournament/components/classic-table/classic-table.component.html
@@ -18,10 +18,11 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let element">
-        <div [routerLink]="['/team', element.teamId, 'general']">
+        <div *ngIf="element.teamId; else placeholder" [routerLink]="['/team', element.teamId, 'general']">
           {{element.name}}
           <mat-icon>link</mat-icon>
         </div>
+        <ng-template #placeholder>{{element.name}}</ng-template>
       </td>
     </ng-container>
 
@@ -66,11 +67,11 @@
     </ng-container>
 
     <ng-container matColumnDef="groupName">
-      <th mat-header-cell *matHeaderCellDef colspan="5"> Group {{ group.groupName }} </th>
+      <th mat-header-cell *matHeaderCellDef colspan="10"> Group {{ group.groupName }} </th>
     </ng-container>
 
     <ng-container matColumnDef="disclaimer">
-      <td mat-footer-cell *matFooterCellDef colspan="5">
+      <td mat-footer-cell *matFooterCellDef colspan="10">
         <app-color-legend [colorLegend]="colorLegend"></app-color-legend>
       </td>
     </ng-container>
