--- a/src/app/tournament/components/round-robin-table/round-robin-table.component.html
+++ b/src/app/tournament/components/round-robin-table/round-robin-table.component.html
@@ -10,7 +10,13 @@
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element">
+        <div *ngIf="element.teamId; else placeholder" [routerLink]="['/team', element.teamId, 'general']">
+          {{element.name}}
+          <mat-icon>link</mat-icon>
+        </div>
+        <ng-template #placeholder>{{element.name}}</ng-template>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="points">
@@ -26,6 +32,31 @@
     <ng-container matColumnDef="goalDifference">
       <th mat-header-cell *matHeaderCellDef> GD </th>
       <td mat-cell *matCellDef="let element"> {{element.goalDifference}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="wins">
+      <th mat-header-cell *matHeaderCellDef> W </th>
+      <td mat-cell *matCellDef="let element"> {{element.wins}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="draws">
+      <th mat-header-cell *matHeaderCellDef> D </th>
+      <td mat-cell *matCellDef="let element"> {{element.draws}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="loses">
+      <th mat-header-cell *matHeaderCellDef> L </th>
+      <td mat-cell *matCellDef="let element"> {{element.loses}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="goals for">
+      <th mat-header-cell *matHeaderCellDef> F </th>
+      <td mat-cell *matCellDef="let element"> {{element.goals}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="goals against">
+      <th mat-header-cell *matHeaderCellDef> A </th>
+      <td mat-cell *matCellDef="let element"> {{element.conceivedGoals}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
