--- a/src/app/team/components/team-matches/team-matches.component.html
+++ b/src/app/team/components/team-matches/team-matches.component.html
@@ -7,6 +7,6 @@
     </div>
   </div>
   <ng-template #noMatches>
-    <app-no-content message="Team is yet to participate in a tournament"></app-no-content>
+    <app-no-content message="Team has no active tournaments"></app-no-content>
   </ng-template>
 </div>
