--- a/src/app/shared/player-card/player-card.component.html
+++ b/src/app/shared/player-card/player-card.component.html
@@ -3,8 +3,10 @@
     <mat-card-header>
       <mat-card-title>{{ player.nickname }}</mat-card-title>
     </mat-card-header>
-    <div class="player__image">
-      <img mat-card-image src="/assets/player.jpg" alt="Photo of {{player.nickname}}">
+    <div class="player__image-container">
+      <div class="player__image">
+        <img mat-card-image [src]="player.picture" alt="Photo of {{player.nickname}}">
+      </div>
     </div>
     <mat-card-content>
       <ul class="player__positions-list">
