--- a/src/app/shared/player-form/player-form.component.scss
+++ b/src/app/shared/player-form/player-form.component.scss
@@ -5,8 +5,28 @@
   display: flex;
   flex-direction: column;
 
-  mat-form-field {
-    max-width: 15rem;
+  mat-form-field,
+  .register__image {
+    max-width: 25rem;
+  }
+
+  .register__image {
+    margin-bottom: $bot-indent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    app-drag-and-drop {
+      width: 100%;
+    }
+
+    img {
+      max-width: 100%;
+    }
+  }
+
+  &--border {
+    border: .125rem solid $color-primary;
   }
 
   &__submit-container {
